--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="calculator">
         <div class="display-screen">
-            <input type="text" id="display" readonly value="0">
+            <input type="text" id="expression-display" class="expression-display" value="" readonly>
+            <input type="text" id="result-display" class="result-display" value="0" readonly>
         </div>
         <div class="buttons">
             <button class="button clear operator">C</button>
